Funzioni per evolvere l'interfaccia Service basati sui repository aggiunti con l'implementazione